// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<span
  className="src-shared-components-TrackIcon-___style__trackIcon___HYWm4"
>
  <div
    className="src-shared-components-TrackIcon-___style__develop___n5Zjz src-shared-components-TrackIcon-___style__main-icon___1HuYb"
  >
    Cd
  </div>
  <a
    href="https://www.topcoder-dev.com/tco"
  >
    <div
      className="src-shared-components-TrackIcon-___style__hidden___jjsru"
    >
      TCO
    </div>
  </a>
</span>
`;

exports[`Matches shallow shapshot 2`] = `
<span
  className="src-shared-components-TrackIcon-___style__trackIcon___HYWm4"
>
  <div
    className="src-shared-components-TrackIcon-___style__data_science___3Nj0P src-shared-components-TrackIcon-___style__main-icon___1HuYb"
  >
    Cd
  </div>
  <a
    href="https://www.topcoder-dev.com/tco"
  >
    <div
      className="src-shared-components-TrackIcon-___style__data_science___3Nj0P src-shared-components-TrackIcon-___style__tco-icon___1nTWI"
    >
      TCO
    </div>
  </a>
</span>
`;

exports[`Matches shallow shapshot 3`] = `
<span
  className="src-shared-components-TrackIcon-___style__trackIcon___HYWm4"
>
  <div
    className="src-shared-components-TrackIcon-___style__develop___n5Zjz src-shared-components-TrackIcon-___style__main-icon___1HuYb"
  >
    Cd
  </div>
  <a
    href="https://www.topcoder-dev.com/tco"
  >
    <div
      className="src-shared-components-TrackIcon-___style__develop___n5Zjz src-shared-components-TrackIcon-___style__tco-icon___1nTWI"
    >
      TCO
    </div>
  </a>
</span>
`;
